height of secabout on mobile fixed

--- a/portfolio.css
+++ b/portfolio.css
@@ -1113,7 +1113,7 @@ p {
   #sec-about {
     margin-top: 150px;
     position: relative;
-    height: 200px; 
+    height: 250px; 
   }
 
   #sec-contacts {
